BundleAdmin: better handle stop/stopAll; prevent bundles required for webui from being stopped

--- a/webui/BundleAdmin/bundle/webapp/templates/bundle.html
+++ b/webui/BundleAdmin/bundle/webapp/templates/bundle.html
@@ -96,3 +96,26 @@
     </table>
   </div>
 </div>
+<div id="modalBackground" class="modalBackground"></div>
+<div id="confirmStop" class="popupWindow">
+  <h1>Stop {{bundle.symbolicName}}?</h1>
+  <div>
+    <p>The following bundles depend upon this bundle:</p>
+    <ul>
+      <li ng-repeat="dep in bundle.requiredBy">{{dep.symbolicName}}</li>
+    </ul>
+    <p>Click <b>Stop Only This</b> to stop only this bundle.
+    Bundles depending upon this bundle may no longer function properly.
+    Click <b>Stop All</b> to stop this bundle and all depending bundles.</p>
+  </div>
+  <div>
+    <div style="text-align: right">
+	  <a href="" ng-click="cancelStop()">Cancel</a>
+	  &nbsp;
+	  <button type="button" ng-click="confirmStop()">Stop Only This</button>
+	  &nbsp;
+	  <button type="button" ng-click="confirmStopAll()">Stop All</button>
+	</div>
+  </div>
+</div>
+
