--- a/platform/RemotingNG/doc/00150-RemotingNGTutorialPart1.page
+++ b/platform/RemotingNG/doc/00150-RemotingNGTutorialPart1.page
@@ -151,8 +151,10 @@ It uses the preprocessor from the Visual C++ compiler.
             <compiler>
                 <exec>cl</exec>
                 <options>
-                    /I "${POCO_BASE}/RemotingNG\Foundation\include"
-                    /I "${POCO_BASE}/RemotingNG\RemotingNG\include"
+                    /I 
+                    "${POCO_BASE}/RemotingNG\Foundation\include"
+                    /I 
+                    "${POCO_BASE}/RemotingNG\RemotingNG\include"
                     /nologo
                     /C
                     /P
@@ -240,7 +242,9 @@ or a semicolon.
 In the above example, the command line options have the following
 meaning:
 
-  * /I: specify search path for include files.
+  * /I: specify search path for include files. Note that the actual
+    path is passed as separate argument and thus placed on the
+    next line.
   * /nologo: do not display the startup banner.
   * /C: preserve comments during preprocessing (important, otherwise
     the code generator would not see the attributes).
@@ -310,8 +314,10 @@ are provided:
     <compiler id="msvc">
         <exec>cl</exec>
         <options>
-            /I "${POCO_BASE}\Foundation\include"
-            /I "${POCO_BASE}\RemotingNG\include"
+            /I
+            "${POCO_BASE}\Foundation\include"
+            /I
+            "${POCO_BASE}\RemotingNG\include"
             /nologo
             /C
             /P
@@ -535,8 +541,10 @@ to create the client code for our TimeService remote service.
             <compiler>
                 <exec>cl</exec>
                 <options>
-                    /I "${POCO_BASE}\Foundation\include"
-                    /I "${POCO_BASE}\RemotingNG\include"
+                    /I
+                    "${POCO_BASE}\Foundation\include"
+                    /I
+                    "${POCO_BASE}\RemotingNG\include"
                     /nologo
                     /C
                     /P
