display additional bundle properties

--- a/webui/BundleAdmin/bundle/webapp/templates/bundle.html
+++ b/webui/BundleAdmin/bundle/webapp/templates/bundle.html
@@ -37,6 +37,15 @@
 		<th>Run Level</th><td>{{bundle.runlevel}}</td>
 	  </tr>
 	  <tr class="odd">
+		<th>Sealed</th><td>{{bundle.sealed}}</td>
+	  </tr>
+	  <tr class="even">
+		<th>Lazy Start</th><td>{{bundle.lazyStart}}</td>
+	  </tr>
+	  <tr class="odd">
+		<th>Prevent Uninstall</th><td>{{bundle.preventUninstall}}</td>
+	  </tr>
+	  <tr class="even">
 		<th>Path</th><td>{{bundle.path}}</td>
 	  </tr>
 	</tbody>
